<resources>
    <string name="oke">oke</string>
    <string name="colon">:</string>
    <string name="home">Home</string>
    <string name="klik">Klik</string>
    <string name="ubah">Ubah</string>
    <string name="cari">Cari</string>
    <string name="masuk">Masuk</string>
    <string name="xxxxx">xxxxx</string>
    <string name="batal">Batal</string>
    <string name="mpuska">mPuska</string>
    <string name="disini">Disini</string>
    <string name="e_mail">E-mail</string>
    <string name="alamat">Alamat</string>
    <string name="logout">Logout</string>
    <string name="keluar">Keluar</string>
    <string name="program">Program</string>
    <string name="sign_in">Sign In</string>
    <string name="niy_nim">NIY/NIM</string>
    <string name="sign_up">Sign Up</string>
    <string name="selesai">Selesai</string>
    <string name="niy_xxx">NIY. xxx</string>
    <string name="logo_uad">Logo UAD</string>
    <string name="password">Password</string>
    <string name="provinsi">Provinsi</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="ubah_data">Ubah Data</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="version">Beta Version</string>
    <string name="catatan_menu">Catatan</string>
    <string name="my_profile">My Profile</string>
    <string name="xxxxxxxxxx">xxxxxxxxxx</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="informatika">Informatika</string>
    <string name="nama_matkul">Nama Matkul</string>
    <string name="kode_matkul">Kode Matkul</string>
    <string name="atur_jadwal">Atur Jadwal</string>
    <string name="input_nilai">Input Nilai</string>
    <string name="print_nilai">Print Nilai</string>
    <string name="app_name">mpuskaapp_mobile</string>
    <string name="notification">1 Notifikasi</string>
    <string name="program_name">Program Name</string>
    <string name="done_message">Done message</string>
    <string name="tahun_ajaran">Tahun Ajaran</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="catatan">1 Catatan Tersedia</string>
    <string name="no_handphone">No. Handphone</string>
    <string name="ta_xxxx_xxxx">TA. xxxx/xxxx</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="password_baru">Password Baru</string>
    <string name="niy_nim_xxxxx">NIY/NIM. xxxxx</string>
    <string name="informasi_mbkm">Informasi MBKM</string>
    <string name="komponen_nilai">Komponen Nilai</string>
    <string name="list_mahasiswa">List Mahasiswa</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="xxxxx_xxxxx_xxx">xxxxx@xxxxx.xxx</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="warning_message">Warning message</string>
    <string name="fulan_bin_fulin">Fulan bin Fulin</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="not_found_message">Not found message</string>
    <string name="detail_matakuliah">Detail Matakuliah</string>
    <string name="forbidden_message">Forbidden message</string>
    <string name="xxxxx_dd_mmmm_yyyy">xxxxx, dd mmmm yyyy</string>
    <string name="lupa_password_klik">Lupa Password ? Klik</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="tempat_tanggal_lahir">Tempat,Tanggal Lahir</string>
    <string name="untuk_mendapatkan_akun">untuk mendapatkan akun</string>
    <string name="semangat_untuk_hari_ini">Semangat untuk hari ini</string>
    <string name="informatics_ahmad_dahlan">Informatics Ahmad Dahlan</string>
    <string name="universitas_ahmad_dahlan">Universitas Ahmad Dahlan</string>
    <string name="apakah_anda_yakin_ingin_keluar">Apakah anda yakin ingin keluar ?</string>
    <string name="capaian_pembelajaran">Capaian Pembelajaran</string>
</resources>