<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:strokeColor="#A2D3F4"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <LinearLayout
                android:id="@+id/course_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/course_detail"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_matkul"
                    android:fontFamily="@font/basic"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/course_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kode_matkul"
                    android:fontFamily="@font/basic"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/course_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lihat_detail"
                    android:textColor="#8DC9F3"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="10dp"
                    android:src="@drawable/ic_play_right"
                    android:layout_marginStart="5dp"
                    app:tint="#8DC9F3"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>