<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.user.lecture.SettingAccountLecture">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/btn_back_setting_account_lecture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_play_left"
                    app:tint="#000000"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/pengaturan_akun"
                    android:textColor="#4F4F4F"
                    android:textSize="26sp" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_rounded_white_stroke_shadow"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:translationZ="4dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:cardPreventCornerOverlap="false"
                app:contentPaddingBottom="15dp"
                app:contentPaddingLeft="20dp"
                app:contentPaddingRight="20dp"
                app:contentPaddingTop="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/lecture_profile_picture"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:scaleType="fitCenter"
                        app:shapeAppearance="@style/circleImage"
                        app:srcCompat="@drawable/ic_profile" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/setting_account_lecture_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/basic"
                            android:text="@string/xxxxx"
                            android:textColor="#4F4F4F"
                            android:textSize="19sp" />

                        <TextView
                            android:id="@+id/setting_account_lecture_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/basic"
                            android:text="@string/xxxxx_xxxxx_xxx"
                            android:textColor="#4F4F4F"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/bg_rounded_white_stroke_shadow"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:translationZ="4dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:cardPreventCornerOverlap="false"
                app:contentPaddingBottom="15dp"
                app:contentPaddingLeft="20dp"
                app:contentPaddingRight="20dp"
                app:contentPaddingTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <View
                            android:id="@+id/divider2"
                            android:layout_width="2dp"
                            android:layout_height="25dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="7dp"
                            android:background="@drawable/divider_black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/divider2"
                            android:fontFamily="@font/basic"
                            android:text="@string/ubah_password"
                            android:textColor="#4F4F4F"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_inlay_change_pass_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/basic"
                        android:theme="@style/cusTxtInLayTransparentBlack"
                        app:boxBackgroundMode="filled"
                        app:boxStrokeColor="#00AAE4"
                        app:endIconMode="password_toggle"
                        app:endIconTint="#32000000"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_inet_change_pass_account"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/basic"
                            android:hint="@string/password_baru"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:textColor="#000000"
                            android:textColorHighlight="#28C2F6"
                            android:textColorHint="#32000000"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_inlay_confirm_change_pass_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/basic"
                        android:theme="@style/cusTxtInLayTransparentBlack"
                        app:boxBackgroundMode="filled"
                        app:boxStrokeColor="#00AAE4"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_inet_confirm_change_pass_account"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/basic"
                            android:hint="@string/konfirmasi_password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:textColor="#000000"
                            android:textColorHighlight="#28C2F6"
                            android:textColorHint="#32000000"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_change_password_lecture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#00AAE4"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/ubah"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF"
                        android:enabled="false"
                        app:cornerRadius="29dp"
                        app:rippleColor="#51CFFA" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>