<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirm_logout_dialog">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/maskot_cat_logout"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/apakah_anda_yakin_ingin_keluar"
                android:fontFamily="@font/roboto_black"
                android:textColor="#000000"
                android:textSize="17sp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/logout_yes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="#FFFFFF"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/keluar"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    app:cornerRadius="12dp"
                    app:layout_constraintEnd_toStartOf="@+id/logout_no"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/logout_no"
                    app:rippleColor="#039CE5"
                    app:strokeColor="#039CE5"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/logout_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="#039CE5"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/batal"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp"
                    app:cornerRadius="12dp"
                    app:layout_constraintBottom_toBottomOf="@id/logout_yes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/logout_yes"
                    app:rippleColor="#027FBA" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>