<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2"
    android:fitsSystemWindows="true"
    tools:context=".activity.SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_alignParentBottom="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/btn_back_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_play_left"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_below="@id/btn_back_sign_up"
                android:fontFamily="@font/roboto_black"
                android:gravity="center_vertical"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:textSize="48sp" />

            <LinearLayout
                android:id="@+id/container_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rounded_white_stroke_shadow"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:translationZ="4dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    app:cardPreventCornerOverlap="false"
                    app:contentPaddingBottom="15dp"
                    app:contentPaddingLeft="20dp"
                    app:contentPaddingRight="20dp"
                    app:contentPaddingTop="15dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_inlay_niy_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_black"
                        android:theme="@style/cusTxtInLayTransparentBlack"
                        app:boxBackgroundMode="filled"
                        app:boxStrokeColor="#00AAE4"
                        app:endIconMode="clear_text"
                        app:endIconTint="#32000000"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_inet_niy_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/basic"
                            android:hint="@string/niy_nim"
                            android:inputType="textPersonName"
                            android:padding="10dp"
                            android:textColor="#000000"
                            android:textColorHighlight="#28C2F6"
                            android:textColorHint="#32000000"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/bg_rounded_white_stroke_shadow"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:translationZ="4dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    app:cardPreventCornerOverlap="false"
                    app:contentPaddingBottom="15dp"
                    app:contentPaddingLeft="20dp"
                    app:contentPaddingRight="20dp"
                    app:contentPaddingTop="15dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_inlay_pass_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_black"
                        android:theme="@style/cusTxtInLayTransparentBlack"
                        app:boxBackgroundMode="filled"
                        app:boxStrokeColor="#00AAE4"
                        app:endIconMode="password_toggle"
                        app:endIconTint="#32000000"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_inet_pass_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/basic"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:textColor="#000000"
                            android:textColorHighlight="#28C2F6"
                            android:textColorHint="#32000000"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_save_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="#00AAE4"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/selesai"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:cornerRadius="29dp"
                    app:rippleColor="#51CFFA" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>